// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users Service when creating new user accounts will create a new user with all options set 1`] = `
{
  "email": "rule1@diveclub.ca",
  "emailVerified": false,
  "hasPassword": true,
  "id": "0EE2C4FF-1013-45DF-9F13-E45ED2DB9555",
  "isLockedOut": false,
  "lastLogin": undefined,
  "lastPasswordChange": undefined,
  "memberSince": 2023-10-02T10:23:02.003Z,
  "profile": {
    "avatar": "https://gravatar.com/Tyler.Durden",
    "bio": "I don't talk about my dive clug",
    "birthdate": "1987-02-12",
    "certifications": [
      {
        "agency": "SSI",
        "course": "Open water",
      },
      {
        "agency": "SSI",
        "course": "Stress and Rescue",
        "date": "2018",
      },
    ],
    "customData": {},
    "experienceLevel": "Experienced",
    "location": "Vancouver, BC",
    "memberSince": 2023-10-02T10:23:02.003Z,
    "name": "Tyler Durden, Esq.",
    "startedDiving": "2011",
    "userId": "0EE2C4FF-1013-45DF-9F13-E45ED2DB9555",
    "username": "Tyler.Durden",
  },
  "role": "user",
  "username": "Tyler.Durden",
}
`;

exports[`Users Service when creating new user accounts will create a new user with all options set 2`] = `
{
  "__v": 0,
  "_id": "0EE2C4FF-1013-45DF-9F13-E45ED2DB9555",
  "email": "rule1@diveclub.ca",
  "emailLowered": "rule1@diveclub.ca",
  "emailVerified": false,
  "friends": [],
  "isLockedOut": false,
  "memberSince": 2023-10-02T10:23:02.003Z,
  "passwordHash": "<<HASHED PASSWORD>>",
  "profile": {
    "avatar": "https://gravatar.com/Tyler.Durden",
    "bio": "I don't talk about my dive clug",
    "birthdate": "1987-02-12",
    "certifications": [
      {
        "agency": "SSI",
        "course": "Open water",
      },
      {
        "agency": "SSI",
        "course": "Stress and Rescue",
        "date": "2018",
      },
    ],
    "experienceLevel": "Experienced",
    "location": "Vancouver, BC",
    "name": "Tyler Durden, Esq.",
    "startedDiving": "2011",
  },
  "role": "user",
  "settings": {
    "profileVisibility": "friends",
  },
  "username": "Tyler.Durden",
  "usernameLowered": "tyler.durden",
}
`;

exports[`Users Service when creating new user accounts will create new users with minimal options 1`] = `
{
  "email": undefined,
  "emailVerified": false,
  "hasPassword": false,
  "id": "0EE2C4FF-1013-45DF-9F13-E45ED2DB9555",
  "isLockedOut": false,
  "lastLogin": undefined,
  "lastPasswordChange": undefined,
  "memberSince": 2023-10-02T10:23:02.003Z,
  "profile": {
    "avatar": undefined,
    "bio": undefined,
    "birthdate": undefined,
    "certifications": [],
    "customData": undefined,
    "experienceLevel": undefined,
    "location": undefined,
    "memberSince": 2023-10-02T10:23:02.003Z,
    "name": undefined,
    "startedDiving": undefined,
    "userId": "0EE2C4FF-1013-45DF-9F13-E45ED2DB9555",
    "username": "Roger69_83",
  },
  "role": "user",
  "username": "Roger69_83",
}
`;

exports[`Users Service when creating new user accounts will create new users with minimal options 2`] = `
{
  "__v": 0,
  "_id": "0EE2C4FF-1013-45DF-9F13-E45ED2DB9555",
  "email": null,
  "emailLowered": null,
  "emailVerified": false,
  "friends": [],
  "isLockedOut": false,
  "memberSince": 2023-10-02T10:23:02.003Z,
  "passwordHash": null,
  "profile": {
    "certifications": [],
  },
  "role": "user",
  "settings": {
    "profileVisibility": "friends",
  },
  "username": "Roger69_83",
  "usernameLowered": "roger69_83",
}
`;

exports[`Users Service when searching profiles Will filter by role: admin 1`] = `
[
  {
    "email": "Darian83@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "bbcd7884-e08d-44b8-b9e7-919c50a84283",
    "isLockedOut": false,
    "lastLogin": 2023-09-26T12:44:49.045Z,
    "lastPasswordChange": 2023-04-26T15:57:49.096Z,
    "memberSince": 2023-03-16T18:32:48.887Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1023.jpg",
      "bio": "Placeat praesentium sequi nostrum cumque rem. Nulla perspiciatis saepe autem eligendi hic minima molestias rem minus. Cum ipsum suscipit enim occaecati neque. Incidunt dolores doloribus explicabo eaque tempore labore earum. Accusamus nobis repudiandae vel occaecati. Quasi porro numquam ex labore itaque provident cupiditate error numquam. Illum accusamus ea dicta consequuntur quo rerum corporis quis.",
      "birthdate": "2020-06-03",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Beginner",
      "location": "Delray Beach",
      "memberSince": 2023-03-16T18:32:48.887Z,
      "name": "Brandon Schultz",
      "startedDiving": "2015",
      "userId": "bbcd7884-e08d-44b8-b9e7-919c50a84283",
      "username": "Darian.Morissette",
    },
    "role": "admin",
    "username": "Darian.Morissette",
  },
  {
    "email": "Ella_Vandervort41@yahoo.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "08a35be6-db26-42fe-bbdd-a67bdd6c62f8",
    "isLockedOut": false,
    "lastLogin": 2023-09-28T02:24:31.177Z,
    "lastPasswordChange": 2023-08-20T06:19:02.612Z,
    "memberSince": 2021-02-17T16:15:26.001Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1062.jpg",
      "bio": "Minima quis at minus. Natus quod perferendis suscipit adipisci ratione ex autem minima. Quasi excepturi adipisci tempora impedit velit provident itaque ipsum exercitationem. Odio dolore culpa in repellendus labore. Iusto est distinctio repudiandae voluptate ut itaque distinctio cum. Eum autem laudantium voluptas quisquam deserunt exercitationem at quidem vel. Pariatur nesciunt quidem nulla a id autem sunt nisi.",
      "birthdate": "2005-07-29",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Expert",
      "location": "O'Fallon",
      "memberSince": 2021-02-17T16:15:26.001Z,
      "name": "Robin Lueilwitz",
      "startedDiving": "2019",
      "userId": "08a35be6-db26-42fe-bbdd-a67bdd6c62f8",
      "username": "Ella.Vandervort36",
    },
    "role": "admin",
    "username": "Ella.Vandervort36",
  },
  {
    "email": "Litzy.Kuphal@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "8eaefe52-399f-47af-9ad1-62cbde503296",
    "isLockedOut": false,
    "lastLogin": 2023-09-13T21:49:11.848Z,
    "lastPasswordChange": 2023-03-09T02:40:44.840Z,
    "memberSince": 2018-12-19T08:43:20.401Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/680.jpg",
      "bio": "Consequatur voluptates ullam quod quis inventore iste sit nihil. Voluptates veniam quas libero alias architecto odio ea. Veniam qui fuga quia voluptatem enim laboriosam omnis necessitatibus. Itaque doloremque sequi ex. Voluptatum ex ipsa fugit facilis autem blanditiis quos aliquid.",
      "birthdate": "2000-05-12",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Professional",
      "location": "Cuyahoga Falls",
      "memberSince": 2018-12-19T08:43:20.401Z,
      "name": "Brenda Feest",
      "startedDiving": "2010",
      "userId": "8eaefe52-399f-47af-9ad1-62cbde503296",
      "username": "Litzy61",
    },
    "role": "admin",
    "username": "Litzy61",
  },
  {
    "email": "Monica48@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "e5ad74ec-43a5-4a1b-8b9b-7ad85f8fee13",
    "isLockedOut": false,
    "lastLogin": 2023-09-14T04:21:05.303Z,
    "lastPasswordChange": 2022-12-31T10:41:57.816Z,
    "memberSince": 2021-04-19T17:29:16.827Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/151.jpg",
      "bio": "Harum quaerat ratione alias molestiae. Dolorem enim neque minima voluptates minima reprehenderit minima laudantium. Fugit qui corporis laboriosam. Similique quidem illum. Hic in dolores mollitia autem. Laborum vel fuga minima porro molestias aliquid repudiandae eius. In explicabo soluta sequi voluptate veniam consectetur aliquam impedit excepturi. Dolor maxime inventore cum distinctio magnam ab laudantium repellat.",
      "birthdate": "1985-09-04",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Melbourne",
      "memberSince": 2021-04-19T17:29:16.827Z,
      "name": "Mrs. Stewart Grant",
      "startedDiving": "1993",
      "userId": "e5ad74ec-43a5-4a1b-8b9b-7ad85f8fee13",
      "username": "Monica51",
    },
    "role": "admin",
    "username": "Monica51",
  },
  {
    "email": "Paolo93@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "bb87ea29-bade-461c-af1f-c29c0c72bac9",
    "isLockedOut": false,
    "lastLogin": 2023-09-26T06:19:12.419Z,
    "lastPasswordChange": 2022-04-30T14:59:45.384Z,
    "memberSince": 2019-01-29T19:36:20.175Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/675.jpg",
      "bio": "Modi excepturi autem quod velit delectus expedita mollitia fugiat eos. Illo officia neque. Quas quos necessitatibus. Illo necessitatibus laborum et. Amet beatae totam magni ipsam reprehenderit dignissimos. Tempora dolores natus atque nobis tempore vitae consectetur. Quae ipsa expedita quo magnam mollitia molestias. Temporibus mollitia incidunt deleniti alias excepturi.",
      "birthdate": "1983-05-20",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Expert",
      "location": "Hamilton",
      "memberSince": 2019-01-29T19:36:20.175Z,
      "name": "Cristina Roberts",
      "startedDiving": "2010",
      "userId": "bb87ea29-bade-461c-af1f-c29c0c72bac9",
      "username": "Paolo90",
    },
    "role": "admin",
    "username": "Paolo90",
  },
]
`;

exports[`Users Service when searching profiles Will filter by role: user 1`] = `
[
  {
    "email": "Abigale.Stracke@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
    "isLockedOut": false,
    "lastLogin": 2023-09-30T12:16:23.414Z,
    "lastPasswordChange": 2022-06-19T17:34:26.072Z,
    "memberSince": 2020-11-04T04:21:22.134Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/402.jpg",
      "bio": "Eligendi temporibus consequatur. Iusto incidunt temporibus nostrum. Blanditiis corrupti veritatis molestias inventore rem veritatis adipisci saepe aperiam. Libero doloribus fugiat. Nesciunt assumenda consequatur corporis ut possimus aspernatur cum rem inventore.",
      "birthdate": "1995-11-27",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Portsmouth",
      "memberSince": 2020-11-04T04:21:22.134Z,
      "name": "Ms. Lindsey Runolfsson",
      "startedDiving": "2010",
      "userId": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
      "username": "Abigale22",
    },
    "role": "user",
    "username": "Abigale22",
  },
  {
    "email": "Aglae.Glover32@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "0df06e55-8e58-4cb3-8499-9873f9677783",
    "isLockedOut": false,
    "lastLogin": 2023-09-19T04:07:50.531Z,
    "lastPasswordChange": 2023-05-06T22:24:45.975Z,
    "memberSince": 2019-01-23T19:44:53.232Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/445.jpg",
      "bio": "Delectus esse voluptatem suscipit corrupti ullam quidem eos. Architecto adipisci quidem accusantium. Porro dolores aut recusandae iure excepturi nisi. Aliquam quis iusto alias quod sit odit. Quam atque modi dignissimos maxime. Repellat incidunt eveniet nemo consequuntur facere. Voluptatum id nostrum ex assumenda.",
      "birthdate": "1968-09-30",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Westminster",
      "memberSince": 2019-01-23T19:44:53.232Z,
      "name": "Lana Daugherty II",
      "startedDiving": "1988",
      "userId": "0df06e55-8e58-4cb3-8499-9873f9677783",
      "username": "Aglae.Glover11",
    },
    "role": "user",
    "username": "Aglae.Glover11",
  },
  {
    "email": "Alfredo.McKenzie78@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "39c12391-1034-49ed-8ba7-f4a91dc17ef5",
    "isLockedOut": false,
    "lastLogin": 2023-09-12T01:31:16.701Z,
    "lastPasswordChange": 2022-07-26T07:29:09.737Z,
    "memberSince": 2021-01-19T01:12:17.451Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/722.jpg",
      "bio": "Quis quaerat aliquam. Quibusdam maiores excepturi eos dolore. Delectus ipsam eveniet ipsam at facere quaerat quas sed quisquam. Quos quis sit labore aliquid. Consectetur quis iure itaque repudiandae rerum nisi.",
      "birthdate": "2015-10-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Bowie",
      "memberSince": 2021-01-19T01:12:17.451Z,
      "name": "Marco Powlowski",
      "startedDiving": "1984",
      "userId": "39c12391-1034-49ed-8ba7-f4a91dc17ef5",
      "username": "Alfredo.McKenzie",
    },
    "role": "user",
    "username": "Alfredo.McKenzie",
  },
  {
    "email": "Allan93@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
    "isLockedOut": false,
    "lastLogin": 2023-09-19T07:28:59.410Z,
    "lastPasswordChange": 2023-04-07T18:42:07.887Z,
    "memberSince": 2023-02-04T10:50:58.496Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1145.jpg",
      "bio": "Vel a commodi porro quos ut. Dolorum nam corporis cum aut maiores aperiam praesentium distinctio. Atque ipsam sapiente quas sequi. Minus commodi nostrum magni. Ullam dolor accusamus similique esse quo. Maxime tempore neque delectus eligendi amet consequuntur quasi earum. Alias minus impedit voluptatem cum aperiam maiores neque corporis. Exercitationem voluptatibus doloribus sequi voluptatem velit.",
      "birthdate": "1956-03-13",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Freeport",
      "memberSince": 2023-02-04T10:50:58.496Z,
      "name": "Sara Ortiz",
      "startedDiving": "2008",
      "userId": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
      "username": "Allan.Witting",
    },
    "role": "user",
    "username": "Allan.Witting",
  },
  {
    "email": "Amy.Franecki9@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
    "isLockedOut": false,
    "lastLogin": 2023-09-20T03:36:54.889Z,
    "lastPasswordChange": 2023-08-31T06:57:18.563Z,
    "memberSince": 2023-02-12T12:57:20.352Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/833.jpg",
      "bio": "Minima fugiat enim. Alias sunt illo culpa neque nulla. Pariatur nisi tenetur mollitia aspernatur maxime veniam autem. Maiores deserunt aliquid aliquam cumque. Culpa ea ducimus corrupti architecto labore provident quaerat. Illo sapiente nihil minima quaerat.",
      "birthdate": "2003-01-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Brooklyn Park",
      "memberSince": 2023-02-12T12:57:20.352Z,
      "name": "Anna Green",
      "startedDiving": "2003",
      "userId": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
      "username": "Amy_Franecki",
    },
    "role": "user",
    "username": "Amy_Franecki",
  },
  {
    "email": "Anais.Mills26@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "4e8b6334-926c-43d6-a830-7eb622edc77c",
    "isLockedOut": false,
    "lastLogin": 2023-09-30T13:53:54.944Z,
    "lastPasswordChange": 2022-11-12T04:49:58.799Z,
    "memberSince": 2022-04-05T00:52:45.069Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/23.jpg",
      "bio": "Adipisci perferendis tenetur. Aperiam in iste fugiat aperiam voluptate reprehenderit culpa inventore. Autem at nemo magni aut. Praesentium facere odit odit assumenda dolorem reprehenderit dolorum cum culpa. Id harum nemo eius unde illum nisi. Quis accusantium velit.",
      "birthdate": "1963-02-11",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Iowa City",
      "memberSince": 2022-04-05T00:52:45.069Z,
      "name": "Frances Bartoletti",
      "startedDiving": "2011",
      "userId": "4e8b6334-926c-43d6-a830-7eb622edc77c",
      "username": "Anais67",
    },
    "role": "user",
    "username": "Anais67",
  },
  {
    "email": "Axel69@yahoo.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "9616d456-44dd-4514-b57e-a16e43cba340",
    "isLockedOut": false,
    "lastLogin": 2023-09-26T09:37:57.731Z,
    "lastPasswordChange": 2023-08-04T21:36:02.035Z,
    "memberSince": 2018-04-11T20:12:03.309Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/677.jpg",
      "bio": "Omnis ipsa similique adipisci natus praesentium unde alias. Ea placeat soluta sequi accusantium. Tenetur voluptatibus et laudantium officiis assumenda eum pariatur blanditiis. Aliquid iure architecto iste sunt minima maxime laboriosam officiis architecto. Architecto aspernatur soluta quae animi omnis aliquam hic provident fugit. Debitis nemo cumque maxime perspiciatis autem occaecati. Ratione aliquam itaque repellat non quibusdam voluptatibus. Ad maiores tempore consequuntur ipsa culpa aspernatur quae doloribus odit.",
      "birthdate": "2012-08-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Professional",
      "location": "Bloomington",
      "memberSince": 2018-04-11T20:12:03.309Z,
      "name": "Miss Clifford Stamm",
      "startedDiving": "1992",
      "userId": "9616d456-44dd-4514-b57e-a16e43cba340",
      "username": "Axel_Kuhlman14",
    },
    "role": "user",
    "username": "Axel_Kuhlman14",
  },
  {
    "email": "Beryl_Carter@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "d5ec6308-0b89-4a1b-b54e-f5d709adccad",
    "isLockedOut": false,
    "lastLogin": 2023-09-23T04:58:30.520Z,
    "lastPasswordChange": 2022-07-03T03:56:53.803Z,
    "memberSince": 2022-08-10T07:20:52.073Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1000.jpg",
      "bio": "Aliquid iste unde architecto repudiandae id sunt reprehenderit earum voluptatum. Magnam optio laudantium nisi sequi vel inventore quam. Nam aut velit earum aspernatur fuga. Voluptate voluptate velit molestias quia delectus delectus porro voluptatum. Maiores debitis harum eius nam aliquid fugit explicabo voluptas.",
      "birthdate": "1986-09-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Expert",
      "location": "Dubuque",
      "memberSince": 2022-08-10T07:20:52.073Z,
      "name": "Leslie Kuhlman",
      "startedDiving": "2020",
      "userId": "d5ec6308-0b89-4a1b-b54e-f5d709adccad",
      "username": "Beryl56",
    },
    "role": "user",
    "username": "Beryl56",
  },
  {
    "email": "Bobby.Mount@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
    "isLockedOut": false,
    "lastLogin": 2023-09-27T04:00:58.248Z,
    "lastPasswordChange": 2021-12-29T20:17:25.951Z,
    "memberSince": 2019-01-31T06:59:16.862Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1048.jpg",
      "bio": "Doloremque blanditiis dolorem quidem omnis. Placeat quaerat voluptates illo assumenda. Dolorum consequuntur iure quas repellendus omnis dolore. Similique rem autem perferendis earum ratione rem ab aliquid nihil. Nostrum sapiente sed occaecati. Molestiae eligendi nisi ad sit cupiditate. Nulla facere id maiores est asperiores.",
      "birthdate": "1966-10-25",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Professional",
      "location": "Hamilton",
      "memberSince": 2019-01-31T06:59:16.862Z,
      "name": "Patty Rosenbaum",
      "startedDiving": "2010",
      "userId": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
      "username": "Bobby.Stamm84",
    },
    "role": "user",
    "username": "Bobby.Stamm84",
  },
  {
    "email": "Brando.Block94@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
    "isLockedOut": false,
    "lastLogin": 2023-09-18T18:38:53.066Z,
    "lastPasswordChange": 2021-12-02T06:59:48.291Z,
    "memberSince": 2023-04-11T08:43:54.366Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/275.jpg",
      "bio": "Iure ab mollitia ducimus harum commodi quod. Nemo dolores quae itaque voluptates dolores consectetur praesentium iste explicabo. Dolore quia nobis. Consectetur repellendus sint adipisci sunt est corrupti. Nemo suscipit blanditiis commodi.",
      "birthdate": "1953-11-12",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Malden",
      "memberSince": 2023-04-11T08:43:54.366Z,
      "name": "Kathy Rice MD",
      "startedDiving": "2004",
      "userId": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
      "username": "Brando.Block99",
    },
    "role": "user",
    "username": "Brando.Block99",
  },
]
`;

exports[`Users Service when searching profiles Will return results sorted by memberSince in asc order 1`] = `
[
  {
    "email": "Filiberto.Hettinger8@yahoo.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "3c0991bd-0c07-47fe-a77b-3777975dfcfe",
    "isLockedOut": false,
    "lastLogin": 2023-09-26T03:37:47.249Z,
    "lastPasswordChange": 2022-09-28T03:42:39.916Z,
    "memberSince": 2017-10-18T14:51:50.449Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
      "bio": "Culpa quo odio impedit impedit. Officiis asperiores eos similique adipisci occaecati. Reprehenderit officiis recusandae repudiandae. Nemo hic veritatis incidunt vero. Sit laudantium beatae. Suscipit quidem unde dolorem. Adipisci voluptatibus dolor facere est est.",
      "birthdate": "1987-01-06",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Professional",
      "location": "Mount Prospect",
      "memberSince": 2017-10-18T14:51:50.449Z,
      "name": "Miss Andrea Volkman",
      "startedDiving": "2018",
      "userId": "3c0991bd-0c07-47fe-a77b-3777975dfcfe",
      "username": "Filiberto.Hettinger",
    },
    "role": "user",
    "username": "Filiberto.Hettinger",
  },
  {
    "email": "Chauncey.Jerde93@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "f79cb4cc-0ee0-4763-8499-1814aca5fca6",
    "isLockedOut": false,
    "lastLogin": 2023-09-26T21:01:05.379Z,
    "lastPasswordChange": 2023-04-28T12:58:53.486Z,
    "memberSince": 2018-03-02T00:57:38.477Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1032.jpg",
      "bio": "Ducimus ipsa sapiente illum saepe doloremque. Libero cumque quae repudiandae. Quae libero optio quae consectetur distinctio delectus. Quae iure voluptatum nemo eveniet. Maiores blanditiis repudiandae perferendis blanditiis itaque nisi aut ullam nemo. Impedit molestiae in itaque eius fugiat vitae facilis unde. Repellendus magni neque quisquam soluta voluptas. Provident est molestiae enim officia ducimus accusamus atque voluptatum.",
      "birthdate": "2019-03-31",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Beginner",
      "location": "Gulfport",
      "memberSince": 2018-03-02T00:57:38.477Z,
      "name": "Roderick Spinka",
      "startedDiving": "1996",
      "userId": "f79cb4cc-0ee0-4763-8499-1814aca5fca6",
      "username": "Chauncey50",
    },
    "role": "user",
    "username": "Chauncey50",
  },
  {
    "email": "Karianne.Kreiger@yahoo.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "28b18988-9670-4f06-a4f8-210f084b34e8",
    "isLockedOut": false,
    "lastLogin": 2023-09-11T16:26:32.366Z,
    "lastPasswordChange": 2022-07-30T04:35:10.694Z,
    "memberSince": 2018-03-15T05:43:50.090Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/959.jpg",
      "bio": "Autem maxime placeat consectetur molestiae dolorem est accusamus possimus. Excepturi sapiente sequi ad. Vitae tempore ipsam similique voluptatum vitae sed. Numquam ipsa alias hic inventore voluptatibus amet inventore quisquam. Aliquid facere laudantium nobis odit. Aperiam molestias dolorum amet dolor cupiditate quo ipsum autem expedita. Nisi a quis.",
      "birthdate": "1986-09-08",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Beginner",
      "location": "Waterbury",
      "memberSince": 2018-03-15T05:43:50.090Z,
      "name": "Edgar Stark",
      "startedDiving": "2018",
      "userId": "28b18988-9670-4f06-a4f8-210f084b34e8",
      "username": "Karianne.Kreiger",
    },
    "role": "user",
    "username": "Karianne.Kreiger",
  },
  {
    "email": "Margarett49@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "83033f3d-3d04-49a2-9f53-62d6a8c54068",
    "isLockedOut": false,
    "lastLogin": 2023-09-25T09:25:48.756Z,
    "lastPasswordChange": 2023-07-08T15:59:33.516Z,
    "memberSince": 2018-03-28T21:50:09.142Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1204.jpg",
      "bio": "Nesciunt blanditiis nesciunt doloribus maxime modi. Porro similique labore quod alias quis. Quod praesentium maxime nam minima. Similique distinctio vitae nesciunt voluptatibus nesciunt. Commodi odio esse doloribus earum sequi quas.",
      "birthdate": "1979-03-08",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Beginner",
      "location": "Bentonville",
      "memberSince": 2018-03-28T21:50:09.142Z,
      "name": "Rosa Boehm PhD",
      "startedDiving": "2020",
      "userId": "83033f3d-3d04-49a2-9f53-62d6a8c54068",
      "username": "Margarett56",
    },
    "role": "user",
    "username": "Margarett56",
  },
  {
    "email": "Gertrude_Cassin61@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "d3252e2b-8018-4679-969e-0375f1129c12",
    "isLockedOut": false,
    "lastLogin": 2023-09-24T00:11:12.045Z,
    "lastPasswordChange": 2023-06-29T15:53:48.878Z,
    "memberSince": 2018-04-10T08:44:26.871Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/585.jpg",
      "bio": "Aliquam adipisci optio veniam cumque reprehenderit corporis aut ab. Voluptates a corporis voluptates. Deleniti eveniet facilis blanditiis distinctio id. Odit ad magni nihil explicabo perferendis facilis incidunt. Corrupti cum impedit vero aliquid accusantium blanditiis quisquam odio. Qui officia molestiae. Alias vel sunt. Maiores esse esse quis.",
      "birthdate": "1975-04-03",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "DeKalb",
      "memberSince": 2018-04-10T08:44:26.871Z,
      "name": "Mr. Dan Douglas",
      "startedDiving": "2021",
      "userId": "d3252e2b-8018-4679-969e-0375f1129c12",
      "username": "Gertrude_Cassin23",
    },
    "role": "user",
    "username": "Gertrude_Cassin23",
  },
]
`;

exports[`Users Service when searching profiles Will return results sorted by memberSince in desc order 1`] = `
[
  {
    "email": "Cletus.Breitenberg14@yahoo.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "bbb62e72-5060-4ddf-9759-dce260d54213",
    "isLockedOut": false,
    "lastLogin": 2023-09-20T15:19:03.340Z,
    "lastPasswordChange": 2023-02-15T11:21:10.293Z,
    "memberSince": 2023-08-16T14:18:28.639Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
      "bio": "In voluptates rem alias laudantium possimus. Minus sed eius. Magnam inventore ullam autem quos quam id nisi excepturi. Dicta aliquam quos fugiat ipsam vero fugiat consectetur. Sequi magnam a maxime consequuntur necessitatibus vel quidem doloribus. Magnam corrupti tempore asperiores. Quam mollitia odio facilis eaque dignissimos nihil adipisci id.",
      "birthdate": "1986-03-08",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Jefferson City",
      "memberSince": 2023-08-16T14:18:28.639Z,
      "name": "Whitney Douglas",
      "startedDiving": "1999",
      "userId": "bbb62e72-5060-4ddf-9759-dce260d54213",
      "username": "Cletus.Breitenberg",
    },
    "role": "user",
    "username": "Cletus.Breitenberg",
  },
  {
    "email": "Reynold95@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "8f9d78df-760f-46c5-a6fe-32f87277b17d",
    "isLockedOut": false,
    "lastLogin": 2023-09-24T02:26:49.810Z,
    "lastPasswordChange": 2022-02-24T21:58:17.584Z,
    "memberSince": 2023-08-14T23:47:58.955Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/34.jpg",
      "bio": "Enim dolores molestiae a veniam pariatur cum illum. Soluta ducimus repellendus ratione culpa unde. Voluptas necessitatibus consectetur voluptates quo dicta accusantium voluptatem. Minus inventore eum doloribus pariatur. Hic sapiente corporis porro neque expedita libero inventore soluta. Quisquam ut sed quos dolorem. Ullam omnis nulla asperiores. Sint cumque tempore recusandae dolorum perferendis cum quis sit.",
      "birthdate": "2014-04-11",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Expert",
      "location": "Carmel",
      "memberSince": 2023-08-14T23:47:58.955Z,
      "name": "Nick Bode",
      "startedDiving": "2003",
      "userId": "8f9d78df-760f-46c5-a6fe-32f87277b17d",
      "username": "Reynold36",
    },
    "role": "user",
    "username": "Reynold36",
  },
  {
    "email": "Wilma.Waelchi90@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "53f26b77-7821-425e-aa13-68f256ec9473",
    "isLockedOut": false,
    "lastLogin": 2023-09-14T02:32:17.424Z,
    "lastPasswordChange": 2023-01-26T08:49:26.647Z,
    "memberSince": 2023-08-10T20:07:10.702Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1210.jpg",
      "bio": "Deserunt voluptatum laborum commodi quo fugiat ipsum distinctio ipsa eum. Deserunt repudiandae dolores architecto deserunt assumenda soluta neque. Officiis voluptatem fugiat dolores accusamus similique ipsa officiis alias. Eos sunt blanditiis deserunt voluptas nihil nisi. Quas eos quos aspernatur est.",
      "birthdate": "2015-01-27",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Professional",
      "location": "Missoula",
      "memberSince": 2023-08-10T20:07:10.702Z,
      "name": "Tyler Rempel",
      "startedDiving": "1994",
      "userId": "53f26b77-7821-425e-aa13-68f256ec9473",
      "username": "Wilma.Waelchi",
    },
    "role": "user",
    "username": "Wilma.Waelchi",
  },
  {
    "email": "Sebastian93@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "9b61f214-0fa5-4571-8cf1-a4d12e58caed",
    "isLockedOut": false,
    "lastLogin": 2023-09-22T22:31:34.884Z,
    "lastPasswordChange": 2023-09-15T13:38:26.140Z,
    "memberSince": 2023-07-03T17:13:14.538Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/638.jpg",
      "bio": "Itaque id rerum accusamus. Unde ipsa inventore. Debitis magni fuga. Cupiditate accusantium alias provident ex ducimus. Aliquid nam quam facilis ad alias adipisci minus. Saepe reiciendis aut aliquam commodi eum iure.",
      "birthdate": "1963-01-18",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Expert",
      "location": "Town 'n' Country",
      "memberSince": 2023-07-03T17:13:14.538Z,
      "name": "Marshall Fadel",
      "startedDiving": "2005",
      "userId": "9b61f214-0fa5-4571-8cf1-a4d12e58caed",
      "username": "Sebastian.Pollich89",
    },
    "role": "user",
    "username": "Sebastian.Pollich89",
  },
  {
    "email": "Brando.Block94@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
    "isLockedOut": false,
    "lastLogin": 2023-09-18T18:38:53.066Z,
    "lastPasswordChange": 2021-12-02T06:59:48.291Z,
    "memberSince": 2023-04-11T08:43:54.366Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/275.jpg",
      "bio": "Iure ab mollitia ducimus harum commodi quod. Nemo dolores quae itaque voluptates dolores consectetur praesentium iste explicabo. Dolore quia nobis. Consectetur repellendus sint adipisci sunt est corrupti. Nemo suscipit blanditiis commodi.",
      "birthdate": "1953-11-12",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Malden",
      "memberSince": 2023-04-11T08:43:54.366Z,
      "name": "Kathy Rice MD",
      "startedDiving": "2004",
      "userId": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
      "username": "Brando.Block99",
    },
    "role": "user",
    "username": "Brando.Block99",
  },
]
`;

exports[`Users Service when searching profiles Will return results sorted by username in asc order 1`] = `
[
  {
    "email": "Abigale.Stracke@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
    "isLockedOut": false,
    "lastLogin": 2023-09-30T12:16:23.414Z,
    "lastPasswordChange": 2022-06-19T17:34:26.072Z,
    "memberSince": 2020-11-04T04:21:22.134Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/402.jpg",
      "bio": "Eligendi temporibus consequatur. Iusto incidunt temporibus nostrum. Blanditiis corrupti veritatis molestias inventore rem veritatis adipisci saepe aperiam. Libero doloribus fugiat. Nesciunt assumenda consequatur corporis ut possimus aspernatur cum rem inventore.",
      "birthdate": "1995-11-27",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Portsmouth",
      "memberSince": 2020-11-04T04:21:22.134Z,
      "name": "Ms. Lindsey Runolfsson",
      "startedDiving": "2010",
      "userId": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
      "username": "Abigale22",
    },
    "role": "user",
    "username": "Abigale22",
  },
  {
    "email": "Aglae.Glover32@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "0df06e55-8e58-4cb3-8499-9873f9677783",
    "isLockedOut": false,
    "lastLogin": 2023-09-19T04:07:50.531Z,
    "lastPasswordChange": 2023-05-06T22:24:45.975Z,
    "memberSince": 2019-01-23T19:44:53.232Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/445.jpg",
      "bio": "Delectus esse voluptatem suscipit corrupti ullam quidem eos. Architecto adipisci quidem accusantium. Porro dolores aut recusandae iure excepturi nisi. Aliquam quis iusto alias quod sit odit. Quam atque modi dignissimos maxime. Repellat incidunt eveniet nemo consequuntur facere. Voluptatum id nostrum ex assumenda.",
      "birthdate": "1968-09-30",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Westminster",
      "memberSince": 2019-01-23T19:44:53.232Z,
      "name": "Lana Daugherty II",
      "startedDiving": "1988",
      "userId": "0df06e55-8e58-4cb3-8499-9873f9677783",
      "username": "Aglae.Glover11",
    },
    "role": "user",
    "username": "Aglae.Glover11",
  },
  {
    "email": "Alfredo.McKenzie78@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "39c12391-1034-49ed-8ba7-f4a91dc17ef5",
    "isLockedOut": false,
    "lastLogin": 2023-09-12T01:31:16.701Z,
    "lastPasswordChange": 2022-07-26T07:29:09.737Z,
    "memberSince": 2021-01-19T01:12:17.451Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/722.jpg",
      "bio": "Quis quaerat aliquam. Quibusdam maiores excepturi eos dolore. Delectus ipsam eveniet ipsam at facere quaerat quas sed quisquam. Quos quis sit labore aliquid. Consectetur quis iure itaque repudiandae rerum nisi.",
      "birthdate": "2015-10-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Bowie",
      "memberSince": 2021-01-19T01:12:17.451Z,
      "name": "Marco Powlowski",
      "startedDiving": "1984",
      "userId": "39c12391-1034-49ed-8ba7-f4a91dc17ef5",
      "username": "Alfredo.McKenzie",
    },
    "role": "user",
    "username": "Alfredo.McKenzie",
  },
  {
    "email": "Allan93@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
    "isLockedOut": false,
    "lastLogin": 2023-09-19T07:28:59.410Z,
    "lastPasswordChange": 2023-04-07T18:42:07.887Z,
    "memberSince": 2023-02-04T10:50:58.496Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1145.jpg",
      "bio": "Vel a commodi porro quos ut. Dolorum nam corporis cum aut maiores aperiam praesentium distinctio. Atque ipsam sapiente quas sequi. Minus commodi nostrum magni. Ullam dolor accusamus similique esse quo. Maxime tempore neque delectus eligendi amet consequuntur quasi earum. Alias minus impedit voluptatem cum aperiam maiores neque corporis. Exercitationem voluptatibus doloribus sequi voluptatem velit.",
      "birthdate": "1956-03-13",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Freeport",
      "memberSince": 2023-02-04T10:50:58.496Z,
      "name": "Sara Ortiz",
      "startedDiving": "2008",
      "userId": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
      "username": "Allan.Witting",
    },
    "role": "user",
    "username": "Allan.Witting",
  },
  {
    "email": "Amy.Franecki9@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
    "isLockedOut": false,
    "lastLogin": 2023-09-20T03:36:54.889Z,
    "lastPasswordChange": 2023-08-31T06:57:18.563Z,
    "memberSince": 2023-02-12T12:57:20.352Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/833.jpg",
      "bio": "Minima fugiat enim. Alias sunt illo culpa neque nulla. Pariatur nisi tenetur mollitia aspernatur maxime veniam autem. Maiores deserunt aliquid aliquam cumque. Culpa ea ducimus corrupti architecto labore provident quaerat. Illo sapiente nihil minima quaerat.",
      "birthdate": "2003-01-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Brooklyn Park",
      "memberSince": 2023-02-12T12:57:20.352Z,
      "name": "Anna Green",
      "startedDiving": "2003",
      "userId": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
      "username": "Amy_Franecki",
    },
    "role": "user",
    "username": "Amy_Franecki",
  },
]
`;

exports[`Users Service when searching profiles Will return results sorted by username in desc order 1`] = `
[
  {
    "email": "Wilma.Waelchi90@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "53f26b77-7821-425e-aa13-68f256ec9473",
    "isLockedOut": false,
    "lastLogin": 2023-09-14T02:32:17.424Z,
    "lastPasswordChange": 2023-01-26T08:49:26.647Z,
    "memberSince": 2023-08-10T20:07:10.702Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1210.jpg",
      "bio": "Deserunt voluptatum laborum commodi quo fugiat ipsum distinctio ipsa eum. Deserunt repudiandae dolores architecto deserunt assumenda soluta neque. Officiis voluptatem fugiat dolores accusamus similique ipsa officiis alias. Eos sunt blanditiis deserunt voluptas nihil nisi. Quas eos quos aspernatur est.",
      "birthdate": "2015-01-27",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Professional",
      "location": "Missoula",
      "memberSince": 2023-08-10T20:07:10.702Z,
      "name": "Tyler Rempel",
      "startedDiving": "1994",
      "userId": "53f26b77-7821-425e-aa13-68f256ec9473",
      "username": "Wilma.Waelchi",
    },
    "role": "user",
    "username": "Wilma.Waelchi",
  },
  {
    "email": "Wanda_Morar@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "d1c16403-9265-4efb-a136-724ecb4166a7",
    "isLockedOut": false,
    "lastLogin": 2023-09-24T13:46:16.091Z,
    "lastPasswordChange": 2022-01-20T14:31:30.485Z,
    "memberSince": 2018-05-13T04:21:12.187Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/544.jpg",
      "bio": "Animi consequatur dicta quasi. Quis officia non. Quis optio veniam. Rerum a maiores tenetur modi vel cumque vero voluptates. Harum est nostrum aut.",
      "birthdate": "1963-11-19",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Redwood City",
      "memberSince": 2018-05-13T04:21:12.187Z,
      "name": "Blanca Rowe",
      "startedDiving": "1998",
      "userId": "d1c16403-9265-4efb-a136-724ecb4166a7",
      "username": "Wanda52",
    },
    "role": "user",
    "username": "Wanda52",
  },
  {
    "email": "Valerie26@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "847cb80e-03d8-4f0e-90b8-a4aef97ee6c1",
    "isLockedOut": false,
    "lastLogin": 2023-09-15T06:37:37.835Z,
    "lastPasswordChange": 2022-04-01T21:39:02.091Z,
    "memberSince": 2021-10-23T10:20:26.624Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/112.jpg",
      "bio": "Similique quia sint quibusdam repudiandae facilis. Unde repudiandae maxime vitae in voluptate aliquid facilis fuga necessitatibus. Architecto alias eaque totam qui voluptate ipsum atque libero. Officiis magnam perspiciatis dolore odio soluta. Eaque nisi iste sunt cum vel eligendi quisquam similique occaecati.",
      "birthdate": "1969-06-08",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Plainfield",
      "memberSince": 2021-10-23T10:20:26.624Z,
      "name": "Ricardo Jakubowski",
      "startedDiving": "2019",
      "userId": "847cb80e-03d8-4f0e-90b8-a4aef97ee6c1",
      "username": "Valerie_Nienow",
    },
    "role": "user",
    "username": "Valerie_Nienow",
  },
  {
    "email": "Sonny89@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "74439297-093a-4111-a091-f2c2cf186b96",
    "isLockedOut": false,
    "lastLogin": 2023-09-29T11:36:49.035Z,
    "lastPasswordChange": 2023-06-30T05:46:29.991Z,
    "memberSince": 2019-02-20T17:31:49.571Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/508.jpg",
      "bio": "Possimus minus laudantium ex quia voluptatum iste numquam possimus laboriosam. Voluptatem quod architecto at consequatur. Molestiae odit error repellat. Aut illo minima quisquam at explicabo exercitationem unde ea sequi. Rem consequatur facere quaerat ullam tempore dignissimos dignissimos. Fuga aliquam vitae. Cumque quisquam quis est.",
      "birthdate": "2020-03-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Expert",
      "location": "Sugar Land",
      "memberSince": 2019-02-20T17:31:49.571Z,
      "name": "Valerie Erdman",
      "startedDiving": "2010",
      "userId": "74439297-093a-4111-a091-f2c2cf186b96",
      "username": "Sonny_Kautzer60",
    },
    "role": "user",
    "username": "Sonny_Kautzer60",
  },
  {
    "email": "Sebastian93@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "9b61f214-0fa5-4571-8cf1-a4d12e58caed",
    "isLockedOut": false,
    "lastLogin": 2023-09-22T22:31:34.884Z,
    "lastPasswordChange": 2023-09-15T13:38:26.140Z,
    "memberSince": 2023-07-03T17:13:14.538Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/638.jpg",
      "bio": "Itaque id rerum accusamus. Unde ipsa inventore. Debitis magni fuga. Cupiditate accusantium alias provident ex ducimus. Aliquid nam quam facilis ad alias adipisci minus. Saepe reiciendis aut aliquam commodi eum iure.",
      "birthdate": "1963-01-18",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Expert",
      "location": "Town 'n' Country",
      "memberSince": 2023-07-03T17:13:14.538Z,
      "name": "Marshall Fadel",
      "startedDiving": "2005",
      "userId": "9b61f214-0fa5-4571-8cf1-a4d12e58caed",
      "username": "Sebastian.Pollich89",
    },
    "role": "user",
    "username": "Sebastian.Pollich89",
  },
]
`;

exports[`Users Service when searching profiles will allow showing results beyond the first page 1`] = `
[
  {
    "email": "Beryl_Carter@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "d5ec6308-0b89-4a1b-b54e-f5d709adccad",
    "isLockedOut": false,
    "lastLogin": 2023-09-23T04:58:30.520Z,
    "lastPasswordChange": 2022-07-03T03:56:53.803Z,
    "memberSince": 2022-08-10T07:20:52.073Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1000.jpg",
      "bio": "Aliquid iste unde architecto repudiandae id sunt reprehenderit earum voluptatum. Magnam optio laudantium nisi sequi vel inventore quam. Nam aut velit earum aspernatur fuga. Voluptate voluptate velit molestias quia delectus delectus porro voluptatum. Maiores debitis harum eius nam aliquid fugit explicabo voluptas.",
      "birthdate": "1986-09-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Expert",
      "location": "Dubuque",
      "memberSince": 2022-08-10T07:20:52.073Z,
      "name": "Leslie Kuhlman",
      "startedDiving": "2020",
      "userId": "d5ec6308-0b89-4a1b-b54e-f5d709adccad",
      "username": "Beryl56",
    },
    "role": "user",
    "username": "Beryl56",
  },
  {
    "email": "Bobby.Mount@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
    "isLockedOut": false,
    "lastLogin": 2023-09-27T04:00:58.248Z,
    "lastPasswordChange": 2021-12-29T20:17:25.951Z,
    "memberSince": 2019-01-31T06:59:16.862Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1048.jpg",
      "bio": "Doloremque blanditiis dolorem quidem omnis. Placeat quaerat voluptates illo assumenda. Dolorum consequuntur iure quas repellendus omnis dolore. Similique rem autem perferendis earum ratione rem ab aliquid nihil. Nostrum sapiente sed occaecati. Molestiae eligendi nisi ad sit cupiditate. Nulla facere id maiores est asperiores.",
      "birthdate": "1966-10-25",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Professional",
      "location": "Hamilton",
      "memberSince": 2019-01-31T06:59:16.862Z,
      "name": "Patty Rosenbaum",
      "startedDiving": "2010",
      "userId": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
      "username": "Bobby.Stamm84",
    },
    "role": "user",
    "username": "Bobby.Stamm84",
  },
  {
    "email": "Brando.Block94@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
    "isLockedOut": false,
    "lastLogin": 2023-09-18T18:38:53.066Z,
    "lastPasswordChange": 2021-12-02T06:59:48.291Z,
    "memberSince": 2023-04-11T08:43:54.366Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/275.jpg",
      "bio": "Iure ab mollitia ducimus harum commodi quod. Nemo dolores quae itaque voluptates dolores consectetur praesentium iste explicabo. Dolore quia nobis. Consectetur repellendus sint adipisci sunt est corrupti. Nemo suscipit blanditiis commodi.",
      "birthdate": "1953-11-12",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Malden",
      "memberSince": 2023-04-11T08:43:54.366Z,
      "name": "Kathy Rice MD",
      "startedDiving": "2004",
      "userId": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
      "username": "Brando.Block99",
    },
    "role": "user",
    "username": "Brando.Block99",
  },
  {
    "email": "Brendan_Vandervort62@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "114b836a-63ad-436b-990b-55ba2556e025",
    "isLockedOut": false,
    "lastLogin": 2023-09-13T04:36:56.478Z,
    "lastPasswordChange": 2023-09-02T20:00:19.163Z,
    "memberSince": 2019-07-07T23:05:29.923Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/537.jpg",
      "bio": "Tempora accusantium laborum assumenda consectetur iure. Atque dignissimos expedita deleniti perferendis ducimus molestiae optio quae. Eos porro voluptas. Autem asperiores vel quam laboriosam tempore rem assumenda autem reiciendis. Sint tenetur natus expedita minus aspernatur sunt. Reprehenderit autem aperiam eos delectus minus. Fuga non molestiae hic quaerat unde occaecati assumenda expedita. Architecto animi adipisci debitis placeat quibusdam provident qui.",
      "birthdate": "2013-03-10",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Expert",
      "location": "Vallejo",
      "memberSince": 2019-07-07T23:05:29.923Z,
      "name": "Cecelia Strosin",
      "startedDiving": "1990",
      "userId": "114b836a-63ad-436b-990b-55ba2556e025",
      "username": "Brendan_Vandervort",
    },
    "role": "user",
    "username": "Brendan_Vandervort",
  },
  {
    "email": "Candido11@yahoo.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "7f5bee59-387d-44ac-9c86-4b0cd1f42bdb",
    "isLockedOut": false,
    "lastLogin": 2023-09-27T05:34:55.066Z,
    "lastPasswordChange": 2023-06-29T18:26:09.189Z,
    "memberSince": 2023-01-24T01:02:36.126Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/960.jpg",
      "bio": "Maiores porro voluptatum ratione. Porro incidunt dolore. Totam ut debitis dolorum numquam delectus ad blanditiis nihil quibusdam. Nostrum vero aliquam unde asperiores molestiae laborum optio tempora. Doloribus molestias illo quisquam porro libero.",
      "birthdate": "1982-07-24",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Beginner",
      "location": "Lake Havasu City",
      "memberSince": 2023-01-24T01:02:36.126Z,
      "name": "Blanche Mount",
      "startedDiving": "2019",
      "userId": "7f5bee59-387d-44ac-9c86-4b0cd1f42bdb",
      "username": "Candido85",
    },
    "role": "user",
    "username": "Candido85",
  },
  {
    "email": "Chauncey.Jerde93@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "f79cb4cc-0ee0-4763-8499-1814aca5fca6",
    "isLockedOut": false,
    "lastLogin": 2023-09-26T21:01:05.379Z,
    "lastPasswordChange": 2023-04-28T12:58:53.486Z,
    "memberSince": 2018-03-02T00:57:38.477Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1032.jpg",
      "bio": "Ducimus ipsa sapiente illum saepe doloremque. Libero cumque quae repudiandae. Quae libero optio quae consectetur distinctio delectus. Quae iure voluptatum nemo eveniet. Maiores blanditiis repudiandae perferendis blanditiis itaque nisi aut ullam nemo. Impedit molestiae in itaque eius fugiat vitae facilis unde. Repellendus magni neque quisquam soluta voluptas. Provident est molestiae enim officia ducimus accusamus atque voluptatum.",
      "birthdate": "2019-03-31",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Beginner",
      "location": "Gulfport",
      "memberSince": 2018-03-02T00:57:38.477Z,
      "name": "Roderick Spinka",
      "startedDiving": "1996",
      "userId": "f79cb4cc-0ee0-4763-8499-1814aca5fca6",
      "username": "Chauncey50",
    },
    "role": "user",
    "username": "Chauncey50",
  },
  {
    "email": "Cletus.Breitenberg14@yahoo.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "bbb62e72-5060-4ddf-9759-dce260d54213",
    "isLockedOut": false,
    "lastLogin": 2023-09-20T15:19:03.340Z,
    "lastPasswordChange": 2023-02-15T11:21:10.293Z,
    "memberSince": 2023-08-16T14:18:28.639Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
      "bio": "In voluptates rem alias laudantium possimus. Minus sed eius. Magnam inventore ullam autem quos quam id nisi excepturi. Dicta aliquam quos fugiat ipsam vero fugiat consectetur. Sequi magnam a maxime consequuntur necessitatibus vel quidem doloribus. Magnam corrupti tempore asperiores. Quam mollitia odio facilis eaque dignissimos nihil adipisci id.",
      "birthdate": "1986-03-08",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Jefferson City",
      "memberSince": 2023-08-16T14:18:28.639Z,
      "name": "Whitney Douglas",
      "startedDiving": "1999",
      "userId": "bbb62e72-5060-4ddf-9759-dce260d54213",
      "username": "Cletus.Breitenberg",
    },
    "role": "user",
    "username": "Cletus.Breitenberg",
  },
]
`;

exports[`Users Service when searching profiles will limit "page" size 1`] = `
[
  {
    "email": "Abigale.Stracke@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
    "isLockedOut": false,
    "lastLogin": 2023-09-30T12:16:23.414Z,
    "lastPasswordChange": 2022-06-19T17:34:26.072Z,
    "memberSince": 2020-11-04T04:21:22.134Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/402.jpg",
      "bio": "Eligendi temporibus consequatur. Iusto incidunt temporibus nostrum. Blanditiis corrupti veritatis molestias inventore rem veritatis adipisci saepe aperiam. Libero doloribus fugiat. Nesciunt assumenda consequatur corporis ut possimus aspernatur cum rem inventore.",
      "birthdate": "1995-11-27",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Portsmouth",
      "memberSince": 2020-11-04T04:21:22.134Z,
      "name": "Ms. Lindsey Runolfsson",
      "startedDiving": "2010",
      "userId": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
      "username": "Abigale22",
    },
    "role": "user",
    "username": "Abigale22",
  },
  {
    "email": "Aglae.Glover32@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "0df06e55-8e58-4cb3-8499-9873f9677783",
    "isLockedOut": false,
    "lastLogin": 2023-09-19T04:07:50.531Z,
    "lastPasswordChange": 2023-05-06T22:24:45.975Z,
    "memberSince": 2019-01-23T19:44:53.232Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/445.jpg",
      "bio": "Delectus esse voluptatem suscipit corrupti ullam quidem eos. Architecto adipisci quidem accusantium. Porro dolores aut recusandae iure excepturi nisi. Aliquam quis iusto alias quod sit odit. Quam atque modi dignissimos maxime. Repellat incidunt eveniet nemo consequuntur facere. Voluptatum id nostrum ex assumenda.",
      "birthdate": "1968-09-30",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Westminster",
      "memberSince": 2019-01-23T19:44:53.232Z,
      "name": "Lana Daugherty II",
      "startedDiving": "1988",
      "userId": "0df06e55-8e58-4cb3-8499-9873f9677783",
      "username": "Aglae.Glover11",
    },
    "role": "user",
    "username": "Aglae.Glover11",
  },
  {
    "email": "Alfredo.McKenzie78@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "39c12391-1034-49ed-8ba7-f4a91dc17ef5",
    "isLockedOut": false,
    "lastLogin": 2023-09-12T01:31:16.701Z,
    "lastPasswordChange": 2022-07-26T07:29:09.737Z,
    "memberSince": 2021-01-19T01:12:17.451Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/722.jpg",
      "bio": "Quis quaerat aliquam. Quibusdam maiores excepturi eos dolore. Delectus ipsam eveniet ipsam at facere quaerat quas sed quisquam. Quos quis sit labore aliquid. Consectetur quis iure itaque repudiandae rerum nisi.",
      "birthdate": "2015-10-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Bowie",
      "memberSince": 2021-01-19T01:12:17.451Z,
      "name": "Marco Powlowski",
      "startedDiving": "1984",
      "userId": "39c12391-1034-49ed-8ba7-f4a91dc17ef5",
      "username": "Alfredo.McKenzie",
    },
    "role": "user",
    "username": "Alfredo.McKenzie",
  },
  {
    "email": "Allan93@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
    "isLockedOut": false,
    "lastLogin": 2023-09-19T07:28:59.410Z,
    "lastPasswordChange": 2023-04-07T18:42:07.887Z,
    "memberSince": 2023-02-04T10:50:58.496Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1145.jpg",
      "bio": "Vel a commodi porro quos ut. Dolorum nam corporis cum aut maiores aperiam praesentium distinctio. Atque ipsam sapiente quas sequi. Minus commodi nostrum magni. Ullam dolor accusamus similique esse quo. Maxime tempore neque delectus eligendi amet consequuntur quasi earum. Alias minus impedit voluptatem cum aperiam maiores neque corporis. Exercitationem voluptatibus doloribus sequi voluptatem velit.",
      "birthdate": "1956-03-13",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Freeport",
      "memberSince": 2023-02-04T10:50:58.496Z,
      "name": "Sara Ortiz",
      "startedDiving": "2008",
      "userId": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
      "username": "Allan.Witting",
    },
    "role": "user",
    "username": "Allan.Witting",
  },
  {
    "email": "Amy.Franecki9@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
    "isLockedOut": false,
    "lastLogin": 2023-09-20T03:36:54.889Z,
    "lastPasswordChange": 2023-08-31T06:57:18.563Z,
    "memberSince": 2023-02-12T12:57:20.352Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/833.jpg",
      "bio": "Minima fugiat enim. Alias sunt illo culpa neque nulla. Pariatur nisi tenetur mollitia aspernatur maxime veniam autem. Maiores deserunt aliquid aliquam cumque. Culpa ea ducimus corrupti architecto labore provident quaerat. Illo sapiente nihil minima quaerat.",
      "birthdate": "2003-01-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Brooklyn Park",
      "memberSince": 2023-02-12T12:57:20.352Z,
      "name": "Anna Green",
      "startedDiving": "2003",
      "userId": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
      "username": "Amy_Franecki",
    },
    "role": "user",
    "username": "Amy_Franecki",
  },
  {
    "email": "Anais.Mills26@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "4e8b6334-926c-43d6-a830-7eb622edc77c",
    "isLockedOut": false,
    "lastLogin": 2023-09-30T13:53:54.944Z,
    "lastPasswordChange": 2022-11-12T04:49:58.799Z,
    "memberSince": 2022-04-05T00:52:45.069Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/23.jpg",
      "bio": "Adipisci perferendis tenetur. Aperiam in iste fugiat aperiam voluptate reprehenderit culpa inventore. Autem at nemo magni aut. Praesentium facere odit odit assumenda dolorem reprehenderit dolorum cum culpa. Id harum nemo eius unde illum nisi. Quis accusantium velit.",
      "birthdate": "1963-02-11",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Novice",
      "location": "Iowa City",
      "memberSince": 2022-04-05T00:52:45.069Z,
      "name": "Frances Bartoletti",
      "startedDiving": "2011",
      "userId": "4e8b6334-926c-43d6-a830-7eb622edc77c",
      "username": "Anais67",
    },
    "role": "user",
    "username": "Anais67",
  },
  {
    "email": "Axel69@yahoo.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "9616d456-44dd-4514-b57e-a16e43cba340",
    "isLockedOut": false,
    "lastLogin": 2023-09-26T09:37:57.731Z,
    "lastPasswordChange": 2023-08-04T21:36:02.035Z,
    "memberSince": 2018-04-11T20:12:03.309Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/677.jpg",
      "bio": "Omnis ipsa similique adipisci natus praesentium unde alias. Ea placeat soluta sequi accusantium. Tenetur voluptatibus et laudantium officiis assumenda eum pariatur blanditiis. Aliquid iure architecto iste sunt minima maxime laboriosam officiis architecto. Architecto aspernatur soluta quae animi omnis aliquam hic provident fugit. Debitis nemo cumque maxime perspiciatis autem occaecati. Ratione aliquam itaque repellat non quibusdam voluptatibus. Ad maiores tempore consequuntur ipsa culpa aspernatur quae doloribus odit.",
      "birthdate": "2012-08-23",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Professional",
      "location": "Bloomington",
      "memberSince": 2018-04-11T20:12:03.309Z,
      "name": "Miss Clifford Stamm",
      "startedDiving": "1992",
      "userId": "9616d456-44dd-4514-b57e-a16e43cba340",
      "username": "Axel_Kuhlman14",
    },
    "role": "user",
    "username": "Axel_Kuhlman14",
  },
]
`;

exports[`Users Service when searching profiles will perform text based searches 1`] = `
[
  {
    "email": "Candido11@yahoo.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "7f5bee59-387d-44ac-9c86-4b0cd1f42bdb",
    "isLockedOut": false,
    "lastLogin": 2023-09-27T05:34:55.066Z,
    "lastPasswordChange": 2023-06-29T18:26:09.189Z,
    "memberSince": 2023-01-24T01:02:36.126Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/960.jpg",
      "bio": "Maiores porro voluptatum ratione. Porro incidunt dolore. Totam ut debitis dolorum numquam delectus ad blanditiis nihil quibusdam. Nostrum vero aliquam unde asperiores molestiae laborum optio tempora. Doloribus molestias illo quisquam porro libero.",
      "birthdate": "1982-07-24",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Beginner",
      "location": "Lake Havasu City",
      "memberSince": 2023-01-24T01:02:36.126Z,
      "name": "Blanche Mount",
      "startedDiving": "2019",
      "userId": "7f5bee59-387d-44ac-9c86-4b0cd1f42bdb",
      "username": "Candido85",
    },
    "role": "user",
    "username": "Candido85",
  },
  {
    "email": "Bobby.Mount@hotmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
    "isLockedOut": false,
    "lastLogin": 2023-09-27T04:00:58.248Z,
    "lastPasswordChange": 2021-12-29T20:17:25.951Z,
    "memberSince": 2019-01-31T06:59:16.862Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1048.jpg",
      "bio": "Doloremque blanditiis dolorem quidem omnis. Placeat quaerat voluptates illo assumenda. Dolorum consequuntur iure quas repellendus omnis dolore. Similique rem autem perferendis earum ratione rem ab aliquid nihil. Nostrum sapiente sed occaecati. Molestiae eligendi nisi ad sit cupiditate. Nulla facere id maiores est asperiores.",
      "birthdate": "1966-10-25",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Professional",
      "location": "Hamilton",
      "memberSince": 2019-01-31T06:59:16.862Z,
      "name": "Patty Rosenbaum",
      "startedDiving": "2010",
      "userId": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
      "username": "Bobby.Stamm84",
    },
    "role": "user",
    "username": "Bobby.Stamm84",
  },
  {
    "email": "Queenie78@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "e1266ade-6c78-4542-8b7c-578259661c76",
    "isLockedOut": false,
    "lastLogin": 2023-09-23T15:48:40.852Z,
    "lastPasswordChange": 2022-09-18T19:10:36.767Z,
    "memberSince": 2018-04-25T21:42:11.884Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/621.jpg",
      "bio": "Dolor earum maxime mount animi iusto repudiandae reprehenderit ducimus architecto. Ex saepe consequuntur nihil adipisci. Autem molestias soluta consectetur incidunt et eaque quod magnam asperiores. Illo explicabo nisi nesciunt. Ea soluta repellendus iure enim. Error aliquam sint sint ab ut sed aperiam. Aspernatur ducimus perspiciatis quibusdam. Neque est officiis blanditiis sapiente.",
      "birthdate": "1999-09-05",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Beginner",
      "location": "The Villages",
      "memberSince": 2018-04-25T21:42:11.884Z,
      "name": "Shaun Oberbrunner",
      "startedDiving": "2019",
      "userId": "e1266ade-6c78-4542-8b7c-578259661c76",
      "username": "Queenie.Stracke50",
    },
    "role": "user",
    "username": "Queenie.Stracke50",
  },
  {
    "email": "David.Ratke24@gmail.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "ed5df084-8725-41f7-a053-b6a86eadbc8d",
    "isLockedOut": false,
    "lastLogin": 2023-09-17T06:43:39.498Z,
    "lastPasswordChange": 2022-12-26T09:04:09.369Z,
    "memberSince": 2020-09-19T15:47:05.910Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1124.jpg",
      "bio": "Recusandae sapiente repellat distinctio illo debitis hic repellendus itaque. Veniam voluptatibus aspernatur occaecati suscipit nostrum id eligendi recusandae quis. Deserunt sed minima. Sit nobis itaque. Non reprehenderit occaecati quam. Nesciunt qui sunt delectus. Ullam assumenda velit iste.",
      "birthdate": "2004-10-30",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Experience",
      "location": "Mount Vernon",
      "memberSince": 2020-09-19T15:47:05.910Z,
      "name": "Jim Grant",
      "startedDiving": "2015",
      "userId": "ed5df084-8725-41f7-a053-b6a86eadbc8d",
      "username": "David_Ratke",
    },
    "role": "user",
    "username": "David_Ratke",
  },
  {
    "email": "Filiberto.Hettinger8@yahoo.com",
    "emailVerified": true,
    "hasPassword": false,
    "id": "3c0991bd-0c07-47fe-a77b-3777975dfcfe",
    "isLockedOut": false,
    "lastLogin": 2023-09-26T03:37:47.249Z,
    "lastPasswordChange": 2022-09-28T03:42:39.916Z,
    "memberSince": 2017-10-18T14:51:50.449Z,
    "profile": {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
      "bio": "Culpa quo odio impedit impedit. Officiis asperiores eos similique adipisci occaecati. Reprehenderit officiis recusandae repudiandae. Nemo hic veritatis incidunt vero. Sit laudantium beatae. Suscipit quidem unde dolorem. Adipisci voluptatibus dolor facere est est.",
      "birthdate": "1987-01-06",
      "certifications": [],
      "customData": undefined,
      "experienceLevel": "Professional",
      "location": "Mount Prospect",
      "memberSince": 2017-10-18T14:51:50.449Z,
      "name": "Miss Andrea Volkman",
      "startedDiving": "2018",
      "userId": "3c0991bd-0c07-47fe-a77b-3777975dfcfe",
      "username": "Filiberto.Hettinger",
    },
    "role": "user",
    "username": "Filiberto.Hettinger",
  },
]
`;
